# granular

./: .gitignore  AUTHORS  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yaml
bags/: __init__.py  bags.py  formats.py
granular/: __init__.py  bag.py  dataset.py  formats.py  granular.py  loader.py  sharded.py  sources.py  utils.py
tests/: test_bag.py  test_bags.py  test_compat.py  test_dataset.py  test_formats.py  test_granular.py  test_loader.py  test_resume.py  test_sharded.py  test_sources.py
