[project]
name = "granular"
version = "0.22.0a1"
description = "Fast format for datasets"
readme="README.md"
license="MIT"
authors = [{name = "Danijar Hafner"}, {name = "Wilson Yan"}]
maintainers = [{name = "Danijar Hafner", email = "mail@danijar.com"}]
urls = {Homepage = "http://github.com/danijar/granular"}
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
  "cloudpickle",
  "msgpack",
  "numpy",
]

[project.optional-dependencies]
formats = [
  "av",
  "pillow",
]

[dependency-groups]
dev = [
  "ipdb",
  "neovim",
  "pytest",
  "ruff",
  "ruff",
  "twine",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
